# graphiti-ollama-fusion

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  ecosystem.config.cjs  graphiti_mcp_server.py  ollama_embedder.py  ollama_graphiti_client.py  pyproject.toml  上傳說明.md
.serena/: project.yml
docs/: USAGE.md  graphiti-memory-rules.md  optimization-analysis.md  p5-optimization-analysis.md  使用工具的指令.md
logs/: .gitkeep
src/: __init__.py  config.py  content_preprocessor.py  deduplication.py  deepseek_client.py  exceptions.py  glm_client.py  importance.py  logging_setup.py  ollama_embedder.py  ollama_graphiti_client.py  openrouter_client.py  safe_memory_add.py  timezone_utils.py  web_api.py
tests/: bench_deepseek_flash_vs_pro.py  comprehensive_test.py  concurrency_test.py  final_comprehensive_test.py  intensive_multi_test.py  model_performance_test.py  quick_test.py  test_content_preprocessor.py  test_cosine_similarity.py  test_embedding.py  test_integration_manual.py  test_mcp_complete.py  test_new_features.py  test_simple_memory.py  test_unit.py  test_web_api.py  test_web_ui_features.py
tools/: batch_reprocess.py  check_vectors.py  debug_graphiti_vectors.py  debug_ollama.py  final_status_report.py  inspect_schema.py  migrate_embeddings.py  performance_diagnose.py  reproduce_cosine_error.py  status_report.py  test_complex_memory.py  test_project.py  upgrade_status_report.py  validate_config.py
web/: index.html
web/css/: style.css
web/js/: api.js  app.js  components.js
