[project]
name = "mcp-server"
version = "0.4.0"
description = "Graphiti MCP Server"
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "mcp>=1.5.0",
    "openai>=1.68.2",
    "graphiti-core>=0.20.4",
    "azure-identity>=1.21.0",
    "aiohttp>=3.12.15",
    "uvicorn>=0.34.3",
    "psutil>=7.0.0",
]
