[project]
name = "mcp-server"
version = "0.4.0"
description = "Graphiti MCP Server"
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "mcp>=1.24.0",
    "openai>=2.14.0",
    "graphiti-core>=0.24.3",
    "azure-identity>=1.25.1",
    "aiohttp>=3.13.2",
    "uvicorn>=0.38.0",
    "psutil>=7.1.3",
]
