[project]
name = "mcp-server"
version = "0.4.0"
description = "Graphiti MCP Server"
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "mcp>=1.24.0",
    "graphiti-core>=0.24.3,<1.0",
    "aiohttp>=3.13.2",
    "uvicorn>=0.38.0",
    "psutil>=7.1.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
